[package]
name = "mini-toolbelt"
version = "0.1.0"
edition = "2021"
description = "Some important features for working with AWS resources."

[dependencies]
aws-config = "1.5.6"
aws-sdk-sqs = "1.42.0"
clap = { version = "4.5.17", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
async-trait = "0.1.2"

[dev-dependencies]
mockall = "0.11.0"